--- a/Makefile.win
+++ b/Makefile.win
@@ -1,15 +1,15 @@
-# Project: Assignment
+# Project: GroupAssignment
 # Makefile created by Dev-C++ 5.11
 
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = pizzaImp.o pizza_Main.o
-LINKOBJ  = pizzaImp.o pizza_Main.o
+OBJ      = PizzaKitchen_Main.o
+LINKOBJ  = PizzaKitchen_Main.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
-BIN      = Assignment.exe
+BIN      = GroupAssignment.exe
 CXXFLAGS = $(CXXINCS) -std=c++11
 CFLAGS   = $(INCS) -std=c++11
 RM       = rm.exe -f
@@ -24,8 +24,5 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(CPP) $(LINKOBJ) -o $(BIN) $(LIBS)
 
-pizzaImp.o: pizzaImp.cpp
-	$(CPP) -c pizzaImp.cpp -o pizzaImp.o $(CXXFLAGS)
-
-pizza_Main.o: pizza_Main.cpp
-	$(CPP) -c pizza_Main.cpp -o pizza_Main.o $(CXXFLAGS)
+PizzaKitchen_Main.o: PizzaKitchen_Main.cpp
+	$(CPP) -c PizzaKitchen_Main.cpp -o PizzaKitchen_Main.o $(CXXFLAGS)
